# MIYABI

./: .gitignore  .woodpecker.yml  AGENTS.md  CMakeLists.txt  CMakePresets.json  DESIGN.md  PERFORMANCE_TEST.md  PLAN.md  README.md  build_sdk.sh  sdk_template_CMakeLists.txt  sdk_template_main.cpp  test_fswatch
.codex/: config.toml
.codex/rules/: default.rules
.github/ISSUE_TEMPLATE/: bug_report.md  development_task.md
.github/workflows/: build.yml  codex-orch-call.yml  pr-auto-approve-merge.yml
artifacts/: codex_last_message.md  issue.json  prompt.md  time_guard.json
assets/levels/: stage1.json
cmake/sdk-package/: MIYABIConfig.cmake  MIYABIConfigVersion.cmake
core/: CMakeLists.txt
core/include/glad/: glad.h
core/include/miyabi/: bridge.h  miyabi.h
core/src/: glad.c  main.cpp  miyabi_bridge.cpp
core/src/physics/: PhysicsManager.cpp  PhysicsManager.hpp
core/src/profiler/: Profiler.hpp
core/src/renderer/: FontManager.cpp  FontManager.hpp  MaterialManager.cpp  MaterialManager.hpp  MeshManager.cpp  MeshManager.hpp  RenderBatching.cpp  RenderBatching.hpp  ShaderManager.cpp  ShaderManager.hpp  TextRenderer.cpp  TextRenderer.hpp  TextureManager.cpp  TextureManager.hpp
core/src/shaders/: instanced.frag  instanced.vert  lit_textured.frag  lit_textured.vert  text.frag  text.vert  textured.frag  textured.vert  triangle.vert
core/tests/: render_batching_test.cpp
docs/: ASSET_IMPORT_REIMPORT.md  CI_AUTOMERGE.md  CODEX_MIGRATION_STATUS.md  COMPLETION_ROADMAP.md  CORE_3D_FOUNDATION_CONTRACT.md  CORE_3D_PRODUCTION_BASELINE.md  CORE_DEVELOPMENT_TRACK.md  CORE_SAVE_SUBSYSTEM.md  DESIGN_Build.md  DESIGN_ECS.md  DESIGN_FFI.md  DESIGN_Renderer.md  DEVELOPMENT_TRACK.md  DISTRIBUTION_1OS.md  GAME_DEVELOPMENT_TRACK.md  ISSUE_DESIGN.md  LOGIC_PUBLIC_API_INVENTORY.md  SAMPLE_GAME_CORE_BOUNDARY.md  SDK_DEFINITION.md  SPEC_SAMPLE_GAME_2D_VERTICAL_SLICE.md  SPEC_SAMPLE_GAME_3D_VERTICAL_SLICE.md  architecture_checks.md
docs/perf/: PERF_BASELINE.md  baseline_macos14.json
docs/reviews/: CORE_3D_DEVEX_EVALUATION_2026-03-08.md
docs/templates/: CORE_3D_DEVEX_EVALUATION_TEMPLATE.md
logic/: CMakeLists.txt  Cargo.toml  build.rs
logic/src/: camera.rs  level.rs  lib.rs  paths.rs  paths.rs.in  perf.rs  performance.cpp  save.rs  ui.rs
sample_game/: Cargo.toml
sample_game/src/: lib.rs
sample_game/tests/: ffi_input_boundary.rs  flow_contract.rs
sample_game_runtime/: Cargo.toml
sample_game_runtime/src/: lib.rs
scripts/: check_core_no_sample_game_dependency.sh  check_core_public_header_include_order.sh  check_sdk_artifacts.sh  package_macos_game.sh  test_build_sdk_excludes_ds_store.sh  test_build_sdk_required_artifacts.sh  test_check_core_no_sample_game_dependency.sh  test_check_core_public_header_include_order.sh  test_core_2d_3d_coexistence.sh  test_core_c3_3d_asset_validation.sh  test_core_c3_3d_perf_baseline.sh  test_distribution_smoke.sh  test_game_track_g2.sh  test_game_track_g4.sh  test_sdk_external_sample_reuse.sh  woodpecker_pr_automerge.sh
tools/: check_perf_regression.py  check_sdk_bundle.py  validate_3d_assets.py
tools/tests/: test_check_perf_regression.py  test_validate_3d_assets.py
tools/tests/fixtures/: invalid_missing_faces.obj.fixture
