[package]
name = "miyabi_logic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
cxx = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[build-dependencies]
# cxx-build is required to run the CXX code generator.
cxx-build = "1.0"

