[package]
name = "sample_game"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sample_game_runtime = { path = "../sample_game_runtime" }
cxx = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
miyabi_logic = { path = "../logic" }

[build-dependencies]
cxx-build = "1.0"
